--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,8 @@
   "license": "MIT",
   "dependencies": {
     "@emotion/babel-plugin": "^11.1.2",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@jjordy/swr-devtools": "^2.0.7",
@@ -23,6 +25,10 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-mentions": "^4.1.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/simple-peer": "^9.10.0",
+    "@types/react-copy-to-clipboard": "^5.0.3",
+    "react-copy-to-clipboard": "^5.0.3",
+    "simple-peer": "^9.10.0",
     "autosize": "^5.0.1",
     "axios": "^0.21.1",
     "core-js": "^3.14.0",
